# teacher-pod

./: Cargo.toml
client/: Cargo.toml  Dioxus.toml  index.html
client/src/: main.rs  mode.rs
client/src/components/: card.rs  form.rs  list.rs  mod.rs  modal.rs  navbar.rs
client/src/data/: account.rs  mod.rs  request.rs
client/src/hooks/: mod.rs
client/src/pages/: content.rs  discover.rs  error.rs  login.rs  mod.rs  search.rs  user.rs
models/: Cargo.toml
models/src/: account.rs  data.rs  lib.rs  podcast.rs
server/: .env  Cargo.toml  database.sql
server/src/: auth.rs  db.rs  error.rs  listennotes.rs  main.rs  task.rs
server/src/api/: account.rs  mod.rs  podcast.rs  search.rs
server/src/models/: account.rs  data.rs  mod.rs  podcast.rs
