[package]
name = "client"
version = "0.1.0"
authors = ["wolf88844 <wolf88840@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["web","router"] }
serde = { version = "1.0.140", features = ["derive"] }
web-sys={version="0.3.77",features=["Storage"]}
js-sys={version="0.3.77"}
gloo={version="0.11.0"}
log={version="0.4.16"}
wasm-logger={version="0.1.5"}
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands","font-awesome-solid"] }
dioxus-toast={version="0.5.0",default-features=false,features=["web"]}
anyhow={version="1.0.95"}
chrono={version="0.4.39"}
url={version="2.5.4"}
serde_json={version="1.0.135"}
once_cell={version="1.20.2"}

models={path="../models",default-features=false,features=["client"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
