[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
chrono={version="0.4.39",features=["serde"]}
serde_json = "1.0.135"

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls"],optional=true }


[features]
default=["server"]
server=["sqlx"]
client=[]